--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Beetroot</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:400,400i,700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -28,7 +28,7 @@
       <figcaption>A bundle of organic beets from a local farm food co-op program</figcaption>
     </figure>
 
-    <p><data value="55">55</data> to <data value="65">65</data> days are needed from germination to harvest of the root.</p>
+    <p class="cycle"><data value="55">55</data> to <data value="65">65</data> days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, Jim Halpert once said this about beets, <q>"Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica"</i></q>.</p>
     <blockquote cite="#">
@@ -37,7 +37,7 @@
     </blockquote>
 
     <h2>Common varieties</h2>
-    <ol>
+    <ol class="varieties">
       <li>Albino</li>
       <li>Bull's Blood</li>
       <li>Chioggia</li>
@@ -51,7 +51,7 @@
       <dd>100 g</dd>
     </dl>
 
-    <dl>
+    <dl class="nutritional">
       <dt>Energy:</dt>
       <dd>180 kJ</dd>
       <dt>Carbohydrates:</dt>
@@ -65,7 +65,7 @@
   </main>
 
   <aside>
-    <h2>Tags</h2>
+    <h2 class:"tags">Tags</h2>
     <ul>
       <li>Crimson</li>
       <li>Awesome</li>
