Change font styles and list types

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </ol>
 
     <h2>Nutritional information</h2>
-    <dl>
+    <dl class="serving">
       <dt>Serving size:</dt>
       <dd>100 g</dd>
     </dl>
@@ -65,8 +65,8 @@
   </main>
 
   <aside>
-    <h2 class:"tags">Tags</h2>
-    <ul>
+    <h2>Tags</h2>
+    <ul class:"tags">
       <li>Crimson</li>
       <li>Awesome</li>
       <li>Pickle-able</li>
