Adjust font size and text decorations

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <h1>Beetroot <i>(Beta vulgaris)</i></h1>
 
     <nav>
-      <ul>
+      <ol>
         <li><a href="#">Common varieties</a></li>
         <li><a href="#">Nutritional information</a></li>
         <li><a href="#">Tags</a></li>
-      </ul>
+      </ol>
     </nav>
 
   </header>
@@ -31,7 +31,7 @@
     <p class="cycle"><data value="55">55</data> to <data value="65">65</data> days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, Jim Halpert once said this about beets, <q>"Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica"</i></q>.</p>
-    <blockquote cite="#">
+    <blockquote>
       I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.
       <cite> - Chris Pratt</cite>
     </blockquote>
@@ -66,7 +66,7 @@
 
   <aside>
     <h2>Tags</h2>
-    <ul class:"tags">
+    <ul class="tags">
       <li>Crimson</li>
       <li>Awesome</li>
       <li>Pickle-able</li>
